# kernel_agent

./: .gitignore  Justfile  README.md  pyproject.toml
docs/: MULTI_SESSION_LOOP_COORDINATOR_SPEC.md  POPCORN_RUN_GUIDE.md  RALPH_LOOP_KERNEL_OPTIMIZATION.md  SKILLS_CROSS_AGENT_COMPAT.md  codex-skills-manifest.md
kernels/: nvfp4_group_gemm_000.py  nvfp4_group_gemm_001.py
prompts/: kernel_optimization_prompt_001.md  kernel_optimization_prompt_afterhours_001.md  kernel_optimization_prompt_pygpubench_001.md  reviewer_prompt_001.md  worker_best_time_reporting_prompt.md
tools/: README.md  README_internal_layout_tuples.md  __init__.py  cutlass_execution_modal_b200_example.py  debug_cutlass_compile_modal.py  disassemble_cubin_modal.py  dump_epilogue_t2r_layouts_modal_b200.py  dump_internal_layout_tuples.py  dump_internal_layout_tuples_modal_b200.py  dump_ptx_modal.py  epilogue_store_search.py  layout_diff.py  layout_snapshot.py  loop_best_time_report.py  loop_coordinator.py  loop_reviewer_driver.py  loop_tui.py  loop_verdict_schema.py  loop_worker_driver.py  modal_python_exec.py  modal_tools_app.py  notes.md  nvfp4_layout_model.py  profile_analysis.py  profile_kernel.py  profile_kernel_torch_modal.py  profile_parsers.py  prove_blockscaled_sf_layouts.py  prove_cta_indexing.py  pygpubench_harness_template.py  pygpubench_modal_app.py  pygpubench_nvfp4_dual_gemm_harness.py  pygpubench_nvfp4_silu_dual_gemm_harness.py  run_loop_afterhours.py  run_loop_coordinator.sh  run_pygpubench_modal.py  sync_claude_skills.sh  tmem_footprint_report.py  tmem_packing_search.py  (+2 more)
(+41 files in other folders)
