[project]
name = "kernel-agents"
version = "0.1.0"
description = "GPU kernel agent workspace tooling"
requires-python = ">=3.12"
dependencies = [
    "modal>=1.3.0",
]

[project.optional-dependencies]
pygpubench-modal = [
    "pygpubench @ git+https://github.com/ngc92/pygpubench.git",
    "nvidia-cutlass-dsl==4.4.0",
    "torch==2.9.1",
]

[tool.uv]
package = false
